Se valida el ancho del banner

--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -144,11 +144,11 @@
 			
 			.title {padding: 10px 5px; background-color:#173069; color:#FFFFFF; font-weight: bold; }
 			
-			.banner { 
+			/*.banner { 
 				background-image: url(@routes.Assets.at("images/banner.jpg"));
 				width:100%;
-				height: 344px;
-			 }
+				height: auto;
+			}*/
 
 			.form-control.input {
 				border:0;
