--- a/TVMaxPolla/web/TVMaxPolla/app/views/signUpForm.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/signUpForm.scala.html
@@ -7,8 +7,8 @@
 @main("La polla de TVMax - FiFA World Cup Brasil 2014 - Registro") {
 
 	<div class="row" >
-		<div class="col-md-12 banner"  >
-			&nbsp;
+		<div>
+			<img src="@routes.Assets.at("images/banner.jpg")" style="width: 100%; height: auto;" >
 		</div>
 	</div>
 
