--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -4,9 +4,10 @@
 
 <html>
     <head>
-        <title>@title</title>
+        <title>Polla Mundial | Mundial Brasil 2014</title>
         
         <meta charset="utf-8">
+        
     	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     	<meta name="description" content="@title">
@@ -20,9 +21,7 @@
         <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>        
        	<script src="@routes.SignUp.jsRoutes()" type="text/javascript"></script>
 		
-        
-       
-        
+
         <style>
         
         	html {font-size:62.5%;} 	
@@ -1383,6 +1382,30 @@
     </head>
     <body onload="init();">
     	
+    	<script>
+    		function fbs_click(width, height) {
+			    var leftPosition, topPosition;
+			    //Allow for borders.
+			    leftPosition = (window.screen.width / 2) - ((width / 2) + 10);
+			    //Allow for title and status bars.
+			    topPosition = (window.screen.height / 2) - ((height / 2) + 50);
+			    var windowFeatures = "status=no,height=" + height + ",width=" + width + ",resizable=yes,left=" + leftPosition + ",top=" + topPosition + ",screenX=" + leftPosition + ",screenY=" + topPosition + ",toolbar=no,menubar=no,scrollbars=no,location=no,directories=no";
+			    u='http://mundial.tvmax-9.com/test_polla10.php';
+			    t='TVMAX Mundial Brasil 2014';
+			    image = 'http://166.78.37.56:9002/assets/images/flags/br-lgflag.png';
+			    summary = 'Aqui mi polla TVMAX Mundial Brasil 2014';
+ 
+			   	window.open('http://www.facebook.com/sharer.php?p[url]='+encodeURIComponent(u)+'&p[images][0]='+encodeURIComponent(image)+'&p[title]='+encodeURIComponent(t)+'p[summary]='+encodeURIComponent(summary),'sharer', windowFeatures);
+			    return false;
+			}
+    		
+
+    		
+    	</script>
+    	
+    	<a href="#" onClick="return fbs_click(400, 300)" target="_blank" title="Compartir en Facebook">Compartir en Facebook</a>
+    	
+    	
     	<div id="fb-root"></div>
 		<script>(function(d, s, id) {
 		  var js, fjs = d.getElementsByTagName(s)[0];
@@ -1413,13 +1436,13 @@
 			var arrDataTeam	= [];
 		</script>
 	
-	
+		
 
-		
-		
-		
+				
+
 
 		<div class="container" style="max-width: 940px;" >
+
 
 
 			@content	
