--- a/TVMaxPolla/web/TVMaxPolla/app/views/signUpForm.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/signUpForm.scala.html
@@ -4,7 +4,7 @@
 @import helper.twitterBootstrap._
 
 
-@main("La polla de TVMax - FiFA World Cup Brasil 2014 - Registro") {
+@main("Polla Mundial | Mundial Brasil 2014") {
 
 	<div class="row" >
 		<div>
