--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -7,7 +7,10 @@
         <title>Polla Mundial | Mundial Brasil 2014</title>
         
         <meta charset="utf-8">
-        
+        <meta property="og:title" content="La Polla Mundial TvMax - Brasil 2014" />
+		<meta property="og:description" content="Ya armé La Polla Mundial TvMax - Brasil 2014, elige al próximo campeón del mundo y a quiénes le tiene que ganar para levantar la copa. Te toca a ti, arma el tuyo y compártelo." />
+
+
     	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     	<meta name="description" content="@title">
@@ -128,7 +131,7 @@
 			ul,li {padding:0; margin:0; border:0; list-style:none outside none; text-align:center;}
 			li[data-phase="6"] {float:left;}
 			
-			.phase .group .game {background: url(@routes.Assets.at("images/logoFondo.png")) left repeat-x;}
+			/*.phase .group .game {background: url(@routes.Assets.at("images/logoFondo.png")) left repeat-x;}*/
 			.phase .group .game:nth-child(2n+1) {background-color:#e2e2e3}
 			.phase .group .game:nth-child(2n) {background-color:#eaeaee}
 			
@@ -1390,21 +1393,14 @@
 			    //Allow for title and status bars.
 			    topPosition = (window.screen.height / 2) - ((height / 2) + 50);
 			    var windowFeatures = "status=no,height=" + height + ",width=" + width + ",resizable=yes,left=" + leftPosition + ",top=" + topPosition + ",screenX=" + leftPosition + ",screenY=" + topPosition + ",toolbar=no,menubar=no,scrollbars=no,location=no,directories=no";
-			    u='http://mundial.tvmax-9.com/test_polla10.php';
-			    t='TVMAX Mundial Brasil 2014';
-			    image = 'http://166.78.37.56:9002/assets/images/flags/br-lgflag.png';
-			    summary = 'Aqui mi polla TVMAX Mundial Brasil 2014';
- 
-			   	window.open('http://www.facebook.com/sharer.php?p[url]='+encodeURIComponent(u)+'&p[images][0]='+encodeURIComponent(image)+'&p[title]='+encodeURIComponent(t)+'p[summary]='+encodeURIComponent(summary),'sharer', windowFeatures);
+			    u='http://polla.tvmax-9.com/?id=' + @session.get("connected");			
+			   	window.open('http://www.facebook.com/sharer.php?u='+encodeURIComponent(u),'sharer', windowFeatures);
 			    return false;
-			}
-    		
-
-    		
+			}    		
     	</script>
     	
-    	<a href="#" onClick="return fbs_click(400, 300)" target="_blank" title="Compartir en Facebook">Compartir en Facebook</a>
     	
+    
     	
     	<div id="fb-root"></div>
 		<script>(function(d, s, id) {
