--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -1393,7 +1393,7 @@
 			    //Allow for title and status bars.
 			    topPosition = (window.screen.height / 2) - ((height / 2) + 50);
 			    var windowFeatures = "status=no,height=" + height + ",width=" + width + ",resizable=yes,left=" + leftPosition + ",top=" + topPosition + ",screenX=" + leftPosition + ",screenY=" + topPosition + ",toolbar=no,menubar=no,scrollbars=no,location=no,directories=no";
-			    u='http://polla.tvmax-9.com/?id=' + @session.get("connected");			
+			    u='http://polla.tvmax-9.com/share/' + @session.get("connected");			
 			   	window.open('http://www.facebook.com/sharer.php?u='+encodeURIComponent(u),'sharer', windowFeatures);
 			    return false;
 			}    		
