Logica del share

--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -182,7 +182,7 @@
 				margin-bottom: 5px;	
 			}
 			
-	
+			.goal.share {text-align: center; font-size: 1.4em; font-weight: bold; padding: 15px;}
 			
         </style>
         
