--- a/TVMaxPolla/web/TVMaxPolla/app/views/share.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/share.scala.html
@@ -230,15 +230,15 @@
 														<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 team team-a" data-team="@game.getTeamA().getIdTeam()" >															
 															<div class="row up" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 " >
-																	<img class="arrow" src="@routes.Assets.at("images/up.png")" />
+																	<!--img class="arrow" src="@routes.Assets.at("images/up.png")" /-->
 																</div>
 															</div>
 															<div class="row" >
-																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal" data-goal="@game.getResults().getScoreTeamA()" >@game.getResults().getScoreTeamA()</div>
+																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal share" data-goal="@game.getResults().getScoreTeamA()" >@game.getResults().getScoreTeamA()</div>
 															</div>
 															<div class="row  down" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-																	<img class="arrow" src="@routes.Assets.at("images/down.png")" />										
+																	<!--img class="arrow" src="@routes.Assets.at("images/down.png")" /-->										
 																</div>
 															</div>
 														</div>
@@ -248,15 +248,15 @@
 														<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 team team-b" data-team="@game.getTeamB().getIdTeam()">														
 															<div class="row up" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 " >
-																	<img class="arrow" src="@routes.Assets.at("images/up.png")" />
+																	<!--img class="arrow" src="@routes.Assets.at("images/up.png")" /-->
 																</div>
 															</div>
 															<div class="row" >
-																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal" data-goal="@game.getResults().getScoreTeamB()"  >@game.getResults().getScoreTeamB()</div>
+																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal share" data-goal="@game.getResults().getScoreTeamB()"  >@game.getResults().getScoreTeamB()</div>
 															</div>
 															<div class="row down" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-																	<img class="arrow" src="@routes.Assets.at("images/down.png")" />										
+																	<!--img class="arrow" src="@routes.Assets.at("images/down.png")" /-->										
 																</div>
 															</div>														
 														</div>
