Actualizaciones de vistas

--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -475,7 +475,7 @@
 			</div>	
 		</div>
 		@if(session.get("social") != "null") {
-			<a href="#" onClick="return fbs_click(400, 300)" target="_blank" title="Compartir en Facebook">Compartir en Facebook</a>	
+			<a href="#" onClick="return fbs_click(400, 300,@session.get("connected"))" target="_blank" title="Compartir en Facebook">Compartir en Facebook</a>	
 		}
 		
 
