--- a/TVMaxPolla/web/TVMaxPolla/app/views/resetPasswordForm.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/resetPasswordForm.scala.html
@@ -3,63 +3,85 @@
 @import helper._
 @import helper.twitterBootstrap._
 
-
-@main("Polla Mundial | Mundial Brasil 2014") {
+<!DOCTYPE html>
+<html>
+    <head>    
+        <title>Polla Mundial | Mundial Brasil 2014</title>        
+        <meta charset="utf-8">
+        <meta property="og:title" content="La Polla Mundial TvMax - Brasil 2014" />
+		<meta property="og:description" content="Ya armé La Polla Mundial TvMax - Brasil 2014, elige al próximo campeón del mundo y a quiénes le tiene que ganar para levantar la copa. Te toca a ti, arma el tuyo y compártelo." />
+		
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    	<meta name="description" content="La Polla Mundial TvMax - Brasil 2014">
+    	<meta name="author" content="Hecticus Software, Inc.">
+    	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/normalize.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/animate.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/polla.css")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>      
+        <script src="@routes.Assets.at("javascripts/facebook.js")" type="text/javascript"></script>        
+       	<script src="@routes.SignUp.jsRoutes()" type="text/javascript"></script>
+       	
+	</head>
 	
-	<div class="row" >
-		<div class="col-md-12 banner"  >
-			&nbsp;
-		</div>
-	</div>
-	
-	<div class="row title" >
-		<div class="col-md-12"  >
-			<span>Restablecer contraseña</span>
-		</div>
-	</div>
-	
-	<div class="row" >
-		<div class="col-md-12">
-			
-			<br />
-			
-			@if(flash.containsKey("danger")) {
-        		<div class="alert alert-danger">@flash.get("danger")</div>
-    		} 
-			
-			@if(flash.containsKey("success")) {			
-        		<div class="alert alert-success">@flash.get("success")</div>
-   			} else{
-   				
-   				<h3>¿Olvidaste tu contraseña?</h3>
-				<p>Ingrese su cuenta de email para restablecer tu contraseña. Recibiras un email con instrucciones a seguir para completar el proceso.</p>
-				
-				 @helper.form(action = routes.ResetPassword.submit, 'role -> "form" ) {
+	<body>
+		<div class="container" style="max-width: 940px;" >
 
-						 @inputText(
-			                resetPasswordForm("email"),
-			                '_label -> "",
-			                '_help -> "",
-			                'class -> "form-control input",
-			                'placeholder -> "Correo electrónico*"
-		           		)
-		           		
-		      	<br />
-				<button type="submit" class="btn btn-block button" >Enviar</button>				
 
-    		}
-				
-				
-   			} 
+			<div class="row" >
+				<div class="col-md-12 banner"  >
+					&nbsp;
+				</div>
+			</div>
+			
+			<div class="row title" >
+				<div class="col-md-12"  >
+					<span>Restablecer contraseña</span>
+				</div>
+			</div>
+			
+			<div class="row" >
+				<div class="col-md-12">
+					
+					<br />
+					
+					@if(flash.containsKey("danger")) {
+		        		<div class="alert alert-danger">@flash.get("danger")</div>
+		    		} 
+					
+					@if(flash.containsKey("success")) {			
+		        		<div class="alert alert-success">@flash.get("success")</div>
+		   			} else{
+		   				
+		   				<h3>¿Olvidaste tu contraseña?</h3>
+						<p>Ingrese su cuenta de email para restablecer tu contraseña. Recibiras un email con instrucciones a seguir para completar el proceso.</p>
 						
-			
+						 @helper.form(action = routes.ResetPassword.submit, 'role -> "form" ) {
+		
+								 @inputText(
+					                resetPasswordForm("email"),
+					                '_label -> "",
+					                '_help -> "",
+					                'class -> "form-control input",
+					                'placeholder -> "Correo electrónico*"
+				           		)
+				           		
+				      	<br />
+						<button type="submit" class="btn btn-block button" >Enviar</button>				
+		
+		    		}
+						
+						
+		   			} 
 
+				</div>
+			</div>	
 			
-			
-			
-	
 		</div>
-	</div>	
-   
-    
-}
+	</body>
+	
+</html>
