--- a/TVMaxPolla/web/TVMaxPolla/app/views/share.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/share.scala.html
@@ -79,7 +79,11 @@
 
 @main("La polla de TVMax - FiFA World Cup Brasil 2014") {
 
-		
+		<div class="row title" style="background-color: #536bb1;">		
+			<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+				<span>¡Hola aquí el  pornostico de @session.get("nick")!</span>	
+			</div>				
+		</div>
 
 		<div class="row menu large" style="margin-top:5px; margin-bottom: 5px; padding: 0;">		
 			<div data-type="large" class="col-xs-12 col-sm-8 col-md-8 col-lg-8" style=" padding: 5px;">				
