Actualizaciones varias de la vistas de control de session

--- a/TVMaxPolla/web/TVMaxPolla/app/views/resetPasswordForm.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/resetPasswordForm.scala.html
@@ -17,9 +17,9 @@
     	<meta name="author" content="Hecticus Software, Inc.">
     	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/normalize.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/animate.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/animate.css")">        
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/polla.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>      
@@ -33,10 +33,11 @@
 
 
 			<div class="row" >
-				<div class="col-md-12 banner"  >
-					&nbsp;
+				<div>
+					<img src="@routes.Assets.at("images/banner.jpg")" style="width: 100%; height: auto;" >
 				</div>
 			</div>
+
 			
 			<div class="row title" >
 				<div class="col-md-12"  >
@@ -46,19 +47,20 @@
 			
 			<div class="row" >
 				<div class="col-md-12">
-					
-					<br />
-					
+									
 					@if(flash.containsKey("danger")) {
+						<br/>
 		        		<div class="alert alert-danger">@flash.get("danger")</div>
 		    		} 
 					
-					@if(flash.containsKey("success")) {			
+					@if(flash.containsKey("success")) {
+						<br/>			
 		        		<div class="alert alert-success">@flash.get("success")</div>
 		   			} else{
 		   				
-		   				<h3>¿Olvidaste tu contraseña?</h3>
-						<p>Ingrese su cuenta de email para restablecer tu contraseña. Recibiras un email con instrucciones a seguir para completar el proceso.</p>
+		   				<h3 style="color: #000000;">¿Olvidaste tu contraseña?</h3>
+		   				<br />
+						<p style="font-size: 0.9em; text-align: center;">Ingrese su cuenta de email para restablecer tu contraseña. <br />Recibiras un email con instrucciones a seguir para completar el proceso.</p>
 						
 						 @helper.form(action = routes.ResetPassword.submit, 'role -> "form" ) {
 		
