--- a/TVMaxPolla/web/TVMaxPolla/public/stylesheets/main.css
+++ b/TVMaxPolla/web/TVMaxPolla/public/stylesheets/main.css
@@ -9,6 +9,9 @@
 	.large {display: none}
 	.prediction {display: none}
 	.col-xs-12.bar {background:none;}
+	.btn.button {width: 70% !important;}
+	.form-control.input { width: 100% !important; padding: 6px 8% !important;}
+	.btn.facebook { width: 100% !important; }
 }
 
 /* Small devices (tablets, 768px and up) */
@@ -22,6 +25,10 @@
 	.large {display: block}
 	.prediction {display: block}
 	.container {width:100% !important};	
+	.btn.button {width: 35% !important;}
+	.form-control.input { width: 50% !important; padding: 6px 4% !important;}
+	.btn.facebook { width: 50% !important;}
+	
 }
 
 /* Medium devices (desktops, 992px and up) */
@@ -48,4 +55,9 @@
 	.prediction {display: block}	
 	
 }*/
+
+
+
+
+
 
