--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -84,7 +84,13 @@
 				<span>¡Bienvenido  @session.get("nick")!</span>	
 			</div>	
 			<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 large" style="text-align: right;" >
-				<button type="button" class="btn btn-default menu phase exit " onclick="fReplace();" style="padding: 5px 10px 5px 10px; background-color: #173069;">SALIR</button>	
+				@if(session.get("social") != "null") {
+					<a href="#" onClick="return fbs_click(400, 300,@session.get("connected"))" target="_blank" title="Compartir en Facebook">
+						<img src="@routes.Assets.at("images/compartirFB.png")" style="width:174px; height: 40px;">
+					</a>
+				}
+
+				<button type="button" class="btn btn-default menu phase exit " onclick="fReplace();" style="padding: 10px; background-color: #173069;">SALIR</button>	
 			</div>			
 		</div>
 
@@ -407,7 +413,7 @@
 		}
 
 
-	<div id="brackets" class="row">
+	<div id="brackets" class="row" style="text-align: center;">
 		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">			
 			<div class="row left">
 				
@@ -469,14 +475,19 @@
 				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 round-16"  >
 					<h4>Octavos</h4>
 					@getGamePhase(2,4,2,3) 	
-				</div>
-				
-				
+				</div>					
 			</div>	
+			
 		</div>
-		@if(session.get("social") != "null") {
-			<a href="#" onClick="return fbs_click(400, 300,@session.get("connected"))" target="_blank" title="Compartir en Facebook">Compartir en Facebook</a>	
-		}
+		
+		
+			
+		
+	</div>
+		
+		
+		
+		
 		
 
 
