--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -105,7 +105,7 @@
 					}
 				</div>					
 			</div>
-			<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" style="text-align: right; padding: 0;" >
+			<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" style="text-align: right; padding: 5px;" >
 				<div class="btn-group">
 					  <button   data-loading-text="Loading..."  type="button" class="btn btn-default menu phase save" >GUARDAR</button>					  
 				</div>						
