--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -15,177 +15,17 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     	<meta name="description" content="@title">
     	<meta name="author" content="Hecticus Software, Inc.">
-    	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/normalize.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+    	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/normalize.css")">        
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/animate.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/polla.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>        
        	<script src="@routes.SignUp.jsRoutes()" type="text/javascript"></script>
 		
-
-        <style>
-        
-        	html {font-size:62.5%;} 	
-        	body{font-family: Arial, Helvetica, sans-serif;}
-        	
-			* { -webkit-border-radius: 0 !important; -moz-border-radius: 0 !important; border-radius: 0 !important;}
-
-
-			.bar {background: #FFFFFF url(@routes.Assets.at("images/separadorLogIn.png")) right top repeat-y; margin-top:5px; }
-			
-			.shadow {
-				/*box-shadow: 0px 0px 25px 3px rgba(236, 202, 108, 0.83) inset;
-				-moz-box-shadow: 0px 0px 25px 3px rgba(236, 202, 108, 0.83) inset;
-				-webkit-box-shadow: 0px 0px 25px 3px rgba(236, 202, 108, 0.83) inset;*/
-				border: 4px solid #f97001;
-				height: 75px;
-				 
-			}
-
-			.help-block {display:none !important; }
-			img.flag {width:67px; height:45px; vertical-align: middle;}
-			.content-flag-score img.flag {width:100%; height:auto; vertical-align: middle;}
-			img.arrow{width:11px; height:8px;  cursor: pointer; }
-			
-			body{padding: 0 !important;}
-			/*.container {padding: 0 !important;}*/
-			
-			#brackets {background: url(@routes.Assets.at("images/fondoEsquema.jpg")) left top repeat; margin-bottom:10px; padding: 5px; height:570px; }
-			
-			#brackets .left .content-flag-score { margin: 0 auto;}
-			#brackets .right .content-flag-score { margin: 0 auto;}
-			
-			#brackets .round-16 {margin-top: 0px; }
-			#brackets .quarter-finals {margin-top: 30px; overflow: visible; height:auto;   }
-			#brackets .semi-finals  {margin-top: 100px; overflow: visible; height:auto; }			
-			#brackets .final  {margin-top: 50px; margin-bottom: 100px;}
-			
-			#brackets .round-16 li {margin-top: 0px; margin-bottom: 10px;}
-			#brackets .round-16 ul:last-child  li:last-child {margin-bottom: 0px;}	
-			#brackets .quarter-finals li {position:relative;  margin-top: 0px; margin-bottom: 75px;}
-			#brackets .quarter-finals ul:last-child  li:last-child {margin-bottom: 0px;}	
-			#brackets .semi-finals li {position:relative;  margin-top: 0px; margin-bottom: 205px;}			
-			#brackets .semi-finals ul:last-child  li:last-child {margin-bottom: 0px;}		
-
-			#brackets .left .quarter-finals li .llave { overflow:visible; position:absolute;  bottom:-15px; left:-25px; width:50px; height:91px;  background: url(@routes.Assets.at("images/brackets/right/small.png")) no-repeat left center; }
-			#brackets .left .semi-finals li .llave { overflow:visible; position:absolute;  bottom:-40px; left:-30px; width:70px; height:151px;  background: url(@routes.Assets.at("images/brackets/right/medium.png")) no-repeat left center; }
-			#brackets .finalists .left .llave { overflow:visible; position:absolute;  bottom:-130px; left:-12px; width:70px; height:330px;  background: url(@routes.Assets.at("images/brackets/right/large.png")) no-repeat left center; }
-			
-			#brackets .right .quarter-finals li .llave { overflow:visible; position:absolute;  bottom:-15px; left:105px; width:50px; height:91px;  background: url(@routes.Assets.at("images/brackets/left/small.png")) no-repeat left center; }
-			#brackets .right .semi-finals li .llave { overflow:visible; position:absolute;  bottom:-40px; left:100px; width:70px; height:151px;  background: url(@routes.Assets.at("images/brackets/left/medium.png")) no-repeat left center; }
-			#brackets .finalists .right .llave { overflow:visible; position:absolute;  bottom:-130px; left:165px; width:70px; height:330px;  background: url(@routes.Assets.at("images/brackets/left/large.png")) no-repeat left center; }
-			
-			
-			#brackets .final li .llave{overflow:visible; position:absolute;  bottom:-70px; left:96px; width:204px; height:46px;  background: url(@routes.Assets.at("images/brackets/win.png")) no-repeat center top; }
-			
-			#brackets h4, h3 {text-align:center; color:#FFFFFF}
-			
-			#brackets h4 {font-size: 1em}
-			#brackets h3 {font-size: 1.2em}
-			
-			.menu, .calcular{cursor:pointer; }
-			.menu.group:hover{color:#ffe85c}
-			.menu.group.on{color:#ffe85c}
-			
-			.hidden {visibility:hidden;}
-			
-			.menu.phase{padding:10px; background-color:#E2EBF9; color:#C4C8D3; font-weight: bold;}
-
-			.menu.phase:hover{background-color:#BEC5DF; color:#ffffff;}
-			.menu.phase[data-phase="1"].on{background-color:#BAC6DD; color:#ffffff;}
-			.menu.phase[data-phase="2"].on{background-color:#8F9FC0; color:#ffffff;}
-			.menu.phase[data-phase="3"].on{background-color:#64789C; color:#ffffff;}
-			.menu.phase[data-phase="4"].on{background-color:#455D86; color:#ffffff;}
-			.menu.phase[data-phase="6"].on{background-color:#314972; color:#ffffff;}
-			
-			button[data-group]{background-color:#64789C; color:#ffffff; font-weight: bold; margin:5px; border:0;}
-			
-			button[data-group="1"].on{background-color:#314972; color:#ffffff;}
-			button[data-group="2"].on{background-color:#314972; color:#ffffff;}
-			button[data-group="3"].on{background-color:#314972; color:#ffffff;}
-			button[data-group="4"].on{background-color:#314972; color:#ffffff;}
-			button[data-group="6"].on{background-color:#314972; color:#ffffff;}
-			button[data-group="7"].on{background-color:#314972; color:#ffffff;}
-			button[data-group="8"].on{background-color:#314972; color:#ffffff;}
-			
-			.btn.btn-default.menu.phase.exit {background-color:#d9534f; color:#FFFFFF;}
-			.btn.btn-default.menu.phase.exit:hover {padding:10px; background-color:#BEC5DF;  color:#FFFFFF;}
-			button {font-size: 0.8em !important}
-			.btn.btn-default.menu.phase.save {background-color:#f1e916; color:#999999;  }
-			.btn.btn-default.menu.phase.save:hover{padding:10px; background-color:#BEC5DF; color:#ffffff;}
-
-			.content-flag-score {width: 75px; height: 68px; text-align: center; padding: 5px; background-color: #ececef; -moz-box-shadow: 3px 3px rgba(214,214,216,0.7); -webkit-box-shadow: 3px 3px rgba(214,214,216,0.7); box-shadow: 3px 3px rgba(214,214,216,0.7); font-size:xx-small; font-weight:bold; }
-			.content-flag-score:last-child{margin:5px 0 5px 0;}			
-			.content-flag-score.on {background-color:#bababb;  -moz-box-shadow: 3px 3px rgba(226,226,229,0.7); -webkit-box-shadow: 3px 3px rgba(226,226,229,0.7); box-shadow: 3px 3px rgba(226,226,229,0.7); text-align: center;}			
-			.content-flag-score.on img.flag {width:75%;}
-
-			.content-flag-score {width: 60px; height: 55px; text-align: center; padding: 5px; background-color: #ececef; -moz-box-shadow: 3px 3px rgba(214,214,216,0.7); -webkit-box-shadow: 3px 3px rgba(214,214,216,0.7); box-shadow: 3px 3px rgba(214,214,216,0.7); font-size:xx-small; font-weight:bold; }
-			
-			.position { float:left; padding-left: 20px;  width:10%; margin-right:20px;}
-			.position:last-child {margin-right:0px; }
-
-			.goal {text-align:center;}
-			
-			ul,li {padding:0; margin:0; border:0; list-style:none outside none; text-align:center;}
-			li[data-phase="6"] {float:left;}
-			
-			/*.phase .group .game {background: url(@routes.Assets.at("images/logoFondo.png")) left repeat-x;}*/
-			.phase .group .game:nth-child(2n+1) {background-color:#e2e2e3}
-			.phase .group .game:nth-child(2n) {background-color:#eaeaee}
-			
-			.phase:not([data-phase="1"]) .group:nth-child(2n+1) .game {background-color:#eaeaee}
-			.phase:not([data-phase="1"]) .group:nth-child(2n) .game{background-color:#e2e2e3}
-			
-			.date {font-size: 0.8em;}
-			.name {font-weight:bold; font-size:0.8em;}
-			
-			.btn-group > button.menu.phase {margin-left:2px;} 
-			.btn-group > button.menu.phase:first-child {margin-left:0;}
-			
-			.title {padding: 10px 5px; background-color:#173069; color:#FFFFFF; font-weight: bold; }
-			
-			/*.banner { 
-				background-image: url(@routes.Assets.at("images/banner.jpg"));
-				width:100%;
-				height: auto;
-			}*/
-
-			.form-control.input {
-				border:0;
-				max-width: 250px;
-  				background: #EAEDF2 url(@routes.Assets.at("images/campoLogIN.png")) no-repeat left;
-				background-size: cover;	
-				font-size: 1em;	 				
-			}
-			
-			
-			.btn.button {
-				width: 170px;
-				height: 35px;
-				background: #485c89 url(@routes.Assets.at("images/registrate.png")) no-repeat left; 
-				background-size: 150px 32px; 
-				color:#ffffff; font-weight: bold;
-			
-				
-			}
-			
-
-			.btn.facebook {
-				width: 170px;
-				height: 35px;
-				border: 1px solid;
-				background: #dcdcdd url(@routes.Assets.at("images/FB.png")) no-repeat 5% center; 
-				background-size: 25px auto; color:#999999; 
-				font-weight: bold;
-				margin-bottom: 5px;	
-			}
-			
-			.goal.share {text-align: center; font-size: 1.4em; font-weight: bold; padding: 15px;}
-			
-        </style>
-        
+ 
 		<script>
 	  		$(function() {
 	  		
@@ -1051,7 +891,7 @@
 				var _return = false;
 				var _currenPhase = $('.row.phase:visible').data('phase');
 				 
-				if (_phase > _currenPhase) {
+				/*if (_phase > _currenPhase) {
 					$.each(arrPhase, function(index,phase) {
 						
 						if (phase.id == _currenPhase) {
@@ -1075,7 +915,7 @@
 					});
 				}
 
-				if (_return) return false;
+				if (_return) return false;*/
 
 				$('.menu.group[data-group]').removeClass('on');		
 				$('.menu.phase').removeClass('on');				
@@ -1446,27 +1286,6 @@
 		
 
 		
-		<!--div  id="myModal" class="modal fade">
-		  <div class="modal-dialog">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-		        <h4 class="modal-title">Guardar</h4>
-		      </div>
-		      <div class="modal-body">
-				<div id="message" >
-		      		
-		      	</div>		        
-		      </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-		      </div>
-		    </div>
-		  </div>
-		</div-->
-		
-		
-									
 		</div>
 		
 
