--- a/TVMaxPolla/web/TVMaxPolla/app/views/share.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/share.scala.html
@@ -80,8 +80,12 @@
 @main("La polla de TVMax - FiFA World Cup Brasil 2014") {
 
 		<div class="row title" style="background-color: #536bb1;">		
-			<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-				<span>¡Hola aquí el  pornostico de @session.get("nick")!</span>	
+			<div class="col-md-12">
+				<span>¡Hola aquí el pronóstico de tu amigo @session.get("nick"), no te quedes sin hacer la tuya, comienza ahora!</span>
+				<br />
+				<span style="font-size: 0.9em;">¿Tienes una cuenta?</span>&nbsp;<a href="@routes.SignIn.blank" style="color:#ffe85c; text-decoration: none;">Ingresa aquí</a>
+				<br />
+				<span style="font-size: 0.9em;">¿Necesitas una cuenta?</span>&nbsp;<a href="@routes.SignUp.blank" style="color:#ffe85c; text-decoration: none;">Registrate aquí</a>					
 			</div>				
 		</div>
 
