--- a/TVMaxPolla/web/TVMaxPolla/public/stylesheets/polla.css
+++ b/TVMaxPolla/web/TVMaxPolla/public/stylesheets/polla.css
@@ -4,15 +4,14 @@ body{font-family: Arial, Helvetica, sans-serif;}
 * { -webkit-border-radius: 0 !important; -moz-border-radius: 0 !important; border-radius: 0 !important;}
 
 
-.bar {background: #FFFFFF url(/assets/images/separadorLogIn.png) right top repeat-y; margin-top:5px; }
-
 .shadow {
-	/*box-shadow: 0px 0px 25px 3px rgba(236, 202, 108, 0.83) inset;
+	box-shadow: 0px 0px 25px 3px rgba(236, 202, 108, 0.83) inset;
 	-moz-box-shadow: 0px 0px 25px 3px rgba(236, 202, 108, 0.83) inset;
-	-webkit-box-shadow: 0px 0px 25px 3px rgba(236, 202, 108, 0.83) inset;*/
-	border: 4px solid #f97001;
+	-webkit-box-shadow: 0px 0px 25px 3px rgba(236, 202, 108, 0.83) inset;
+	/*border: 4px solid #f97001;
 	height: 75px;
-	 
+	 */
+	
 }
 
 .help-block {display:none !important; }
@@ -94,7 +93,8 @@ button {font-size: 0.8em !important}
 
 .content-flag-score {width: 60px; height: 55px; text-align: center; padding: 5px; background-color: #ececef; -moz-box-shadow: 3px 3px rgba(214,214,216,0.7); -webkit-box-shadow: 3px 3px rgba(214,214,216,0.7); box-shadow: 3px 3px rgba(214,214,216,0.7); font-size:xx-small; font-weight:bold; }
 
-.position { float:left; padding-left: 20px;  width:10%; margin-right:20px;}
+.position { float:left; padding-left: 20px;  width:10%; margin-right:25px;}
+.position:first-child {margin-left:5px; }
 .position:last-child {margin-right:0px; }
 
 .goal {text-align:center;}
@@ -140,7 +140,8 @@ margin: 0 auto;
 
 .form-control.input {
 	border:0;
-	width: 50%;
+	width: 40%;
+	height: 45px;
 	background: #EAEDF2 url(/assets/images/campoLogIN.png) no-repeat left;
 	background-size: cover;	
 	font-size: 1em;	 	
@@ -151,7 +152,7 @@ margin: 0 auto;
 
 
 .btn.facebook {
-	width: 50%;
+	width: 40%;
 	height: 45px;
 	border: 1px solid;
 	background: #DCDCD8 url(/assets/images/FB.png) no-repeat 1% center;
