--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -83,13 +83,7 @@
 			<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 				<span>¡Bienvenido  @session.get("nick")!</span>	
 			</div>	
-			<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 large" style="text-align: right;" >
-				@if(session.get("social") != "null") {
-					<a href="#" onClick="return fbs_click(400, 300,@session.get("connected"))" target="_blank" title="Compartir en Facebook">
-						<img src="@routes.Assets.at("images/compartirFB.png")" style="width:174px; height: 40px;">
-					</a>
-				}
-
+			<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 large" style="text-align: right;" >				
 				<button type="button" class="btn btn-default menu phase exit " onclick="fReplace();" style="padding: 10px; background-color: #173069;">SALIR</button>	
 			</div>			
 		</div>
@@ -414,6 +408,13 @@
 
 
 	<div id="brackets" class="row" style="text-align: center;">
+		
+		<div style="display: block; position: relative;  margin: 0 auto; width:100%; height: 40px; top:80%;">
+				<a href="#" onClick="return fbs_click(400, 300,@session.get("connected"))" target="_blank" title="Compartir en Facebook">
+					<img src="@routes.Assets.at("images/compartirFB.png")" style="width:174px; height: 40px;">
+				</a>
+		</div>
+		
 		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">			
 			<div class="row left">
 				
@@ -478,8 +479,12 @@
 				</div>					
 			</div>	
 			
+			
+			
 		</div>
 		
+		
+
 		
 			
 		
