--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -415,7 +415,7 @@
 				</a>
 		</div>
 		
-		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">			
+		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="margin-top:-40px;">			
 			<div class="row left">
 				
 				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 round-16" >
@@ -437,7 +437,7 @@
 			</div>
 		</div>
 		
-		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"  style="margin-top:-40px;" >
 						
 			<div class="row" >				
 				<div class="col-md-12 final">
@@ -458,7 +458,7 @@
 			</div>
 						
 		</div>
-		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"  style="margin-top:-40px;">
 					
 					
 			<div class="row right">
