--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -253,7 +253,7 @@
 														<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 team team-a" data-team="@game.getTeamA().getIdTeam()" >															
 															<div class="row up" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 " >
-																	<img class="arrow" src="@routes.Assets.at("images/up.png")" />
+																	<img class="arrow up" src="@routes.Assets.at("images/up.png")" />
 																</div>
 															</div>
 															<div class="row" >
@@ -261,7 +261,7 @@
 															</div>
 															<div class="row  down" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-																	<img class="arrow" src="@routes.Assets.at("images/down.png")" />										
+																	<img class="arrow down" src="@routes.Assets.at("images/down.png")" />										
 																</div>
 															</div>
 														</div>
@@ -390,8 +390,8 @@
 							
 							<div class="position" style="background: url(@routes.Assets.at("images/arrows/" + group.getName().toLowerCase() + ".png")) no-repeat left center; background-size: 20px 80px;">							
 								
-									<div data-group="@group.getIdGroup()" data-position="0" data-index="@group.getName()1" class="content-flag-score" style="display: block; margin: 0 auto;">@group.getName()1</div>	
-									<div data-group="@group.getIdGroup()" data-position="1" data-index="@group.getName()2" class="content-flag-score" style="display: block; margin: 0 auto;">@group.getName()2</div>
+									<div data-group="@group.getIdGroup()" data-position="0" data-index="@group.getName()1" class="content-flag-score" style="display: block; margin-bottom: 2px;">@group.getName()1</div>	
+									<div data-group="@group.getIdGroup()" data-position="1" data-index="@group.getName()2" class="content-flag-score" style="display: block;">@group.getName()2</div>
 							
 								
 									
