--- a/TVMaxPolla/web/TVMaxPolla/app/views/signInForm.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/signInForm.scala.html
@@ -20,7 +20,9 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>      
-        <script src="@routes.Assets.at("javascripts/facebook.js")" type="text/javascript"></script>        
+        <script src="@routes.Assets.at("javascripts/facebook.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/place.js")" type="text/javascript"></script>
+                
        	<script src="@routes.SignUp.jsRoutes()" type="text/javascript"></script>
        	
 	</head>
