--- a/TVMaxPolla/web/TVMaxPolla/public/stylesheets/main.css
+++ b/TVMaxPolla/web/TVMaxPolla/public/stylesheets/main.css
@@ -15,15 +15,19 @@
 	
 	
 	img.arrow {
-		width: 20px;
-		height: 15px;
+			width: 19px;
+		height: 11px;
 		cursor: pointer;
 	}
 	
 	.goal {
 		text-align: center;
 		font-size: 1.2em;
-		font-weight: bold;}
+		font-weight: bold;
+			width: 19px;
+		height: auto;
+		}
+		
 	
 }
 
@@ -47,15 +51,18 @@
 	
 
 img.arrow {
-		width: 15px;
-		height: 10px;
+			width: 19px;
+		height: 11px;
 		cursor: pointer;
-		}
+}
 	
 	.goal {
 		text-align: center;
 		font-size: 1.0em;
-		font-weight: bold;}
+		font-weight: bold;
+				width: 19px;
+		height: auto;
+		}
 	
 }
 
@@ -77,15 +84,17 @@ img.arrow {
 	.position:first-child {margin-left:5px; }
 	.position:last-child {margin-right:0px; }
 	img.arrow {
-		width: 18px;
-		height: 10px;
+		width: 19px;
+		height: 11px;
 		cursor: pointer;
-		}
+	}
 	
 	.goal {
 		text-align: center;
 		font-size: 1.0em;
-		font-weight: bold;}
+		font-weight: bold;
+				width: 19px;
+		height: auto;}
 	
 }
 
