Actualiaciones varias asociadas a evaluaviones de TVN

--- a/TVMaxPolla/web/TVMaxPolla/app/views/signUpForm.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/signUpForm.scala.html
@@ -20,8 +20,12 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>      
-        <script src="@routes.Assets.at("javascripts/facebook.js")" type="text/javascript"></script>        
+        <script src="@routes.Assets.at("javascripts/facebook.js")" type="text/javascript"></script>  
+   
        	<script src="@routes.SignUp.jsRoutes()" type="text/javascript"></script>
+
+       	
+       	
        	
 	</head>
 	<body onload="init();">
@@ -124,7 +128,8 @@
 				</div>
 							
 			</div>
-	
+			
+			<script src="@routes.Assets.at("javascripts/placeholders.jquery.js")"></script>
 			<script type="text/javascript">
 		    
 				var successFn = function(data) {						
@@ -143,7 +148,7 @@
 			</script>
 
 		</div>
-				<br />
+		<br />
 		<br />
 		<br />
 		<br />
