--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -163,8 +163,7 @@
 									@if(phase.getIdPhase() == 1) {
 										<div class="btn-group">
 											@for(group <- phase.getMatchGroup()) {		
-												<!--button data-group="@group.getIdGroup()" class="menu group @("on".when(group.getIdGroup() == 1)) @("hidden".when(group.getIdGroup() != 1)) " >@group.getName()</button-->
-												<button data-group="@group.getIdGroup()" class="menu group @("on".when(group.getIdGroup() == 1)) " >@group.getName()</button>			
+												<button data-group="@group.getIdGroup()" class="menu group @("on".when(group.getIdGroup() == 1))" style="padding:10px;" >@group.getName()</button>				
 											}
 										</div>
 									}
@@ -251,16 +250,16 @@
 													<div class="row" style="text-align: center;" >
 													
 														<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 team team-a" data-team="@game.getTeamA().getIdTeam()" >															
-															<div class="row up" >
-																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 " >
+															<div class="row" >
+																<div>
 																	<img class="arrow up" src="@routes.Assets.at("images/up.png")" />
 																</div>
 															</div>
 															<div class="row" >
-																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal" data-goal="@game.getResults().getScoreTeamA()" >@game.getResults().getScoreTeamA()</div>
+																<div class="goal" data-goal="@game.getResults().getScoreTeamA()" >@game.getResults().getScoreTeamA()</div>
 															</div>
-															<div class="row  down" >
-																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+															<div class="row" >
+																<div >
 																	<img class="arrow down" src="@routes.Assets.at("images/down.png")" />										
 																</div>
 															</div>
@@ -269,17 +268,17 @@
 															<div style="background-color:#999999; width:1px; height: 50px; margin: 0 auto; "></div>
 														</div>
 														<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 team team-b" data-team="@game.getTeamB().getIdTeam()">														
-															<div class="row up" >
-																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 " >
-																	<img class="arrow" src="@routes.Assets.at("images/up.png")" />
+															<div class="row" >
+																<div>
+																	<img class="arrow up" src="@routes.Assets.at("images/up.png")" />
 																</div>
 															</div>
 															<div class="row" >
-																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal" data-goal="@game.getResults().getScoreTeamB()"  >@game.getResults().getScoreTeamB()</div>
+																<div class="goal" data-goal="@game.getResults().getScoreTeamB()"  >@game.getResults().getScoreTeamB()</div>
 															</div>
-															<div class="row down" >
-																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-																	<img class="arrow" src="@routes.Assets.at("images/down.png")" />										
+															<div class="row" >
+																<div>
+																	<img class="arrow down" src="@routes.Assets.at("images/down.png")" />										
 																</div>
 															</div>														
 														</div>
@@ -335,9 +334,8 @@
 							<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 small" style="text-align: right;">
 								@if(phase.getIdPhase() == 1) {
 									<div class="btn-group">
-										@for(group <- phase.getMatchGroup()) {		
-											<!--button data-group="@group.getIdGroup()" class="menu group @("on".when(group.getIdGroup() == 1)) @("hidden".when(group.getIdGroup() != 1)) " >@group.getName()</button-->
-											<button data-group="@group.getIdGroup()" class="menu group @("on".when(group.getIdGroup() == 1))" >@group.getName()</button>			
+										@for(group <- phase.getMatchGroup()) {													
+											<button data-group="@group.getIdGroup()" class="menu group @("on".when(group.getIdGroup() == 1))" style="padding:10px;" >@group.getName()</button>			
 										}
 									</div>
 								}
@@ -383,21 +381,10 @@
 				<div class="row prediction" >			
 					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="padding:5px; background-color:#e2e2e3; overflow: hidden">		
 					@for((group,index) <- phase.getMatchGroup().zipWithIndex) {
-						
-						
-
-						
-							
-							<div class="position" style="background: url(@routes.Assets.at("images/arrows/" + group.getName().toLowerCase() + ".png")) no-repeat left center; background-size: 20px 80px;">							
-								
-									<div data-group="@group.getIdGroup()" data-position="0" data-index="@group.getName()1" class="content-flag-score" style="display: block; margin-bottom: 2px;">@group.getName()1</div>	
-									<div data-group="@group.getIdGroup()" data-position="1" data-index="@group.getName()2" class="content-flag-score" style="display: block;">@group.getName()2</div>
-							
-								
-									
-							</div>
-							
-						
+						<div class="position" style="background: url(@routes.Assets.at("images/arrows/" + group.getName().toLowerCase() + ".png")) no-repeat left center; background-size: 20px 80px;">															
+							<div data-group="@group.getIdGroup()" data-position="0" data-index="@group.getName()1" class="content-flag-score" style="display: block; margin-bottom: 2px;">@group.getName()1</div>	
+							<div data-group="@group.getIdGroup()" data-position="1" data-index="@group.getName()2" class="content-flag-score" style="display: block;">@group.getName()2</div>
+						</div>
 					}
 					</div>					
 				</div>		
@@ -410,7 +397,7 @@
 	<div id="brackets" class="row" style="text-align: center;">
 		
 		<div style="display: block; position: relative;  margin: 0 auto; width:100%; height: 40px; top:80%;">
-				<a href="#" onClick="return fbs_click(400, 300,@session.get("connected"))" target="_blank" title="Compartir en Facebook">
+				<a href="#" onClick="return fbs_click(600, 400,@session.get("connected"))" target="_blank" title="Compartir en Facebook">
 					<img src="@routes.Assets.at("images/compartirFB.png")" style="width:174px; height: 40px;">
 				</a>
 		</div>
