--- a/TVMaxPolla/web/TVMaxPolla/app/views/signInForm.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/signInForm.scala.html
@@ -20,10 +20,11 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>      
-        <script src="@routes.Assets.at("javascripts/facebook.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/place.js")" type="text/javascript"></script>
-                
+        <script src="@routes.Assets.at("javascripts/facebook.js")" type="text/javascript"></script>   
        	<script src="@routes.SignUp.jsRoutes()" type="text/javascript"></script>
+       	
+       
+			       	
        	
 	</head>
 	<body onload="init();">
@@ -92,6 +93,8 @@
 						<button type="submit" class="btn btn-block button" >Ingresar</button>	
 						<!--a href="@routes.ResetPassword.blank">¿Olvidaste tu contraseña?</a-->
 						
+						 
+						 
 					</div>		 
 				}
 				
@@ -103,9 +106,12 @@
 				
 				
 						
+				
 			
-			</div>	
-
+			</div>
+				
+			<script src="@routes.Assets.at("javascripts/placeholders.jquery.js")"></script>
+			
 		</div>
 		<br />
 		<br />
