Actualizaciones varias para obtener el email

--- a/TVMaxPolla/web/TVMaxPolla/app/views/signInForm.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/signInForm.scala.html
@@ -22,12 +22,12 @@
         <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>      
         <script src="@routes.Assets.at("javascripts/facebook.js")" type="text/javascript"></script>   
        	<script src="@routes.SignUp.jsRoutes()" type="text/javascript"></script>
-       	
+       	<script src="@routes.Assets.at("javascripts/ga.js")" type="text/javascript"></script>
        
 			       	
        	
 	</head>
-	<body onload="init();">
+	<body>
 		<div class="container" style="max-width: 940px;" >
 
 			<div class="row" >
