Actualizaciones varias asociadas a:
- Vista de noticias
- Vista de Polla
- Forma de indexar htmls y declarar css

--- a/TVMaxPolla/TVMaxPolla/platforms/android/res/xml/config.xml
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/res/xml/config.xml
@@ -40,8 +40,14 @@
     <author email="contact@hecticus.com" href="http://www.hecticus.com">
         Hecticus Software Inc.
     </author>
+    
     <content src="index.html" />
     <access origin="*" />
+    <access origin="http://mundial.tvmax-9.com/*" />
+    <access origin="http://polla.tvmax-9.com/*" />    
+    <access origin="http://10.0.1.125/*" />
+    
+    
     <feature name="org.apache.cordova.facebook.Connect">
         <param name="android-package" value="org.apache.cordova.facebook.ConnectPlugin" />
     </feature>
